Replaced shadow-cljs with lein-cljsbuild Added React

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,7 +5,10 @@
     <title>BOSS</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="/js/main.js"></script>
+    <div id="app"></div>
+    <script src="/main.js"></script>
+    <script>
+      boss.frontend.app.run();
+    </script>
   </body>
 </html>
