--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,9 +6,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/main.js"></script>
-    <script>
-      boss.frontend.app.run();
-    </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
