--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>BOSS</title>
+    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
     <script src="/js/main.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
